--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ authors = ["Keyvan Ebrahimpour <k1.ebrahimpour@gmail.com>"]
 readme = "README.md"
 
 [tool.pytest.ini_options]
-testpaths = ["libs/basic_ops/add/tests", "tests"]
+testpaths = ["libs/basic_ops", "tests"]
 pythonpath = ["libs", "src"]
 
 [tool.poetry.dependencies]
