Add cli and test_cli
- when we add new ops and features, we have to add cli tests accordingly
- test_cli throws exception for operation which are not implemented yet

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -10,6 +10,9 @@ repos:
     rev: v3.0.0a5  # Correct version
     hooks:
       - id: pylint
+        name: pylint
+        entry: poetry run pylint
+
         additional_dependencies: ["pylint==v3.0.0a5"]
 
   # Fix trailing whitespaces
